# churn-prediction

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
churn_prediction/: config.py  dataset.py  features.py  main.py  plots.py
churn_prediction/modeling/: predict.py  train.py
data/processed/: predictions.xlsx
docs/: df.xlsx  df_high_risk.xlsx  streamlit_app.py
mlruns/.trash/126042816673643175/: meta.yaml
mlruns/.trash/740896136898023634/: meta.yaml
mlruns/0/: meta.yaml
mlruns/744945735912055657/: meta.yaml
mlruns/744945735912055657/0c4c2e7b89ff4f7b9548fdb9053da688/: meta.yaml
mlruns/744945735912055657/19c93e91d28a4a77b512624deb0fb038/: meta.yaml
mlruns/744945735912055657/1fca807b351c43d9a5cc7a35f596425a/: meta.yaml
mlruns/744945735912055657/222be496b088451eaf138ed433a76e79/: meta.yaml
mlruns/744945735912055657/291370be15e44efca5a3eeced0226a6f/: meta.yaml
mlruns/744945735912055657/32b19d41e73346e1910e3ead7676fd2c/: meta.yaml
mlruns/744945735912055657/3569d62f74c24ea189d3c1541725088e/: meta.yaml
mlruns/744945735912055657/36f988388c5d48d298cb1317b1e1d464/: meta.yaml
mlruns/744945735912055657/36fd02b6fdd84251b30e3ebf607c8b3c/: meta.yaml
mlruns/744945735912055657/3c46bb5672da4e2a8190694a82e2118c/: meta.yaml
mlruns/744945735912055657/447a974277a447aabb9fd48025ce0d60/: meta.yaml
mlruns/744945735912055657/47fb345d2b094d6ba790a6bd3ccb2e80/: meta.yaml
models/549845065003665155/: meta.yaml
notebooks/: 1.0-lc-churn-prediction.ipynb  2.0-lc-EDA.ipynb  churn_prediction.ipynb
notebooks/mlruns/0/: meta.yaml
(+631 files in other folders)
