[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "churn_prediction"
version = "0.0.1"
description = "This project aims to develop a predictive system for a retail bank facing a customer attrition problem. Using a dataset comprising customer information and departure history over three months, the goal is to create a scoring model capable of identifying customers likely to leave the bank. The system must not only generate an attrition risk score but also provide explanations about the factors influencing this risk, thus allowing bank advisors to adapt their commercial approach. The analysis takes into account the bank's structure, divided into six branches with potentially different processes. The project encompasses in-depth statistical analyses, the construction of a robust predictive model, and the development of result interpretation tools, aiming to optimize customer retention through a data-driven and personalized approach."
authors = [
  { name = "Loick CUER" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["churn_prediction"]
force_sort_within_sections = true
